--- a/src/App.css
+++ b/src/App.css
@@ -478,4 +478,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
+  /* border: 1px solid red; */
+}
+
+.modal-footer {
+  /* justify-content: flex-start !important; */
+  /* border: 1px solid red; */
+}
+
+.close-button {
+  margin-left: auto !important;
 }
