--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@
   text-align: center;
   padding-top: 10rem;
   background: black;
+  /* z-index: 1; */
   /* border: 1px solid blue; */
 }
 
@@ -148,6 +149,7 @@
   /* grid-template-rows: 50% 50%; */
   justify-items: center;
   background-color: black;
+  z-index: 1;
   /* border: 1px solid red; */
   /* padding: 2rem; */
   /* padding-left: 5rem; */
@@ -188,7 +190,7 @@
 }
 
 .sports {
-  background-image: url('./assets/SportsScraper.png');
+  background-image: url('./assets/screenshots/sportsscraper/sportsscraper1.png');
   animation-name: lebron;
   animation-duration: 1s;
 }
@@ -209,20 +211,20 @@
 
 .pokemon  {
   /* animation-fill-mode: both; */
-  background-image: url('./assets/pokemon.png');
+  background-image: url('./assets/screenshots/pokemon/pokemon1.png');
   animation-name: pokeTCG;
   animation-duration: 1s;
 }
 
 .nightlife {
-  background-image: url('./assets/nightlife.png');
+  background-image: url('./assets/screenshots/nightlife/nightlife1.png');
   animation-name: nyght;
   animation-duration: 1s;
 }
 
 .uefa {
   /* z-index:0; */
-  background-image: url('./assets/uefa.png');
+  background-image: url('./assets/screenshots/uefa/uefa1.png');
   animation-name: soccer;
   animation-duration: 1s;
   /* transition: 0.5s */
@@ -561,4 +563,8 @@
 
 .contact-info p {
   font-size: 1.2rem;
+}
+
+.profpic {
+  border-radius: 15px;
 }
