--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@
   height: 80px;
   z-index: 1000;
   box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
-  border: 1px solid green;
+  /* border: 1px solid green; */
 }
 
 .first-nav {
@@ -103,10 +103,6 @@
   text-align: right;
   /* border: 1px solid red; */
   /* width: 100% */
-}
-
-.icon-bars {
-  display: none;
 }
 
 
@@ -142,6 +138,20 @@
   cursor: pointer;
   text-decoration: underline;
   transition-timing-function: ease;
+}
+
+.bars {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .nav-items .nav-item {
+    display: none;
+  }
+  .nav-items .bars {
+    float: right;
+    display: block;
+  }
 }
 
 .home-container {
