--- a/src/App.css
+++ b/src/App.css
@@ -81,14 +81,20 @@
   /* background: black; */
 }
 
+.mr-auto {
+  display: flex;
+  justify-items: stretch;
+  align-items: center;
+}
+
 .nav {
-  background-color: var(--off-white);
-  position: sticky;
-  top: 0px;
-  width: 100%;
-  height: 80px;
-  z-index: 1000;
-  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
+  /* background-color: var(--off-white); */
+  /* position: sticky; */
+  /* top: 0px; */
+  /* width: 100%; */
+  /* height: 80px; */
+  /* z-index: 1000; */
+  /* box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15); */
   /* border: 1px solid green; */
 }
 
@@ -100,7 +106,7 @@
 }
 
 .nav-content {
-  text-align: right;
+  /* text-align: right; */
   /* border: 1px solid red; */
   /* width: 100% */
 }
@@ -108,43 +114,43 @@
 
 .nav-items {
   /* border: 1px solid red; */
-  text-align: left;
-  width: 100%
+  /* text-align: left; */
+  /* width: 100% */
 }
 
 .resume {
-  float: right;
+  /* float: right; */
 }
 
 .nav .nav-content {
   /* max-width: 900px; */
-  padding: 0rem 3rem;
+  /* padding: 0rem 3rem; */
   /* margin: 0 auto; */
-  display: flex;
+  /* display: flex; */
   /* justify-content: space-between; */
-  align-items: center;
-  height: 100%;
-  width: 100%;
+  /* align-items: center; */
+  /* height: 100%; */
+  /* width: 100%; */
 }
 
 .nav-item {
-  display: inline;
+  /* display: inline; */
   margin-left: 2rem;
   /* color: #333; */
 }
 
 .nav-item:hover {
-  color: black;
-  cursor: pointer;
-  text-decoration: underline;
-  transition-timing-function: ease;
+  /* color: black; */
+  /* cursor: pointer; */
+  /* text-decoration: underline; */
+  /* transition-timing-function: ease; */
 }
 
 .bars {
-  display: none;
+  /* display: none; */
 }
 
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .nav-items .nav-item {
     display: none;
   }
@@ -152,7 +158,25 @@
     float: right;
     display: block;
   }
-}
+} */
+
+/* @media screen and (max-width: 600px) {
+  .nav-items.responsive {
+    position: relative;
+  } */
+
+  /* .nav-items.responsive .bars {
+    position: absolute;
+    right: 0px;
+    top: 0px
+  }
+
+  .nav-items.responsive li {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+} */
 
 .home-container {
   /* height: 100vh; */
