made full sections of page responsive by removing hard coded height value per section

--- a/src/App.css
+++ b/src/App.css
@@ -184,12 +184,13 @@
 }
 
 .about-container {
-  height: 100vh;
+  /* height: 100vh; */
+
   /* border: 1px solid red; */
 }
 
 .projects-container {
-  height: 100vh;
+  /* height: 100vh; */
   text-align: center;
   padding-top: 10rem;
   background: black;
