added text shadow to carousel text to make easier to read

--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,7 @@
 }
 
 .blog-container {
-  margin-top: 10rem;
+  /* margin-top: 10rem; */
   background-color: purple
   /* border: 1px solid red; */
 }
@@ -409,7 +409,7 @@
 
 .about-container {
   /* max-width: 100%; */
-  border: 10px solid red;
+  /* border: 10px solid red; */
   /* display: grid; */
   /* border: 1px solid red; */
   /* grid-template-columns: repeat(auto-fill, minmax(700px, 1fr)); */
@@ -429,7 +429,7 @@
 }
 
 .about-content {
-  border: 5px solid green;
+  /* border: 5px solid green; */
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(485px, 1fr));
 }
@@ -443,7 +443,7 @@
 }
 
 .holder {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   /* margin: auto; */
   text-align: center;
   /* margin-top: 2rem; */
@@ -455,12 +455,12 @@
 }
 
 .holder img {
-  border: 1px solid teal;
+  /* border: 1px solid teal; */
   height: 40vh;
 }
 
 .about-title {
-  border: 12px solid purple;
+  /* border: 12px solid purple; */
   /* grid-column: 1/3; */
   text-align: center;
   /* border: 1px solid red; */
@@ -471,19 +471,19 @@
   padding-top: 6rem;
   /* padding-right: 6rem; */
   /* max-width: 70%; */
-  border: 1px solid red;
+  /* border: 1px solid red; */
   /* text-align: center; */
 }
 
 .lemmesee {
-  border: 1px solid purple
+  /* border: 1px solid purple */
 }
 
 .caption {
-  /* margin: auto; */
+  margin: auto;
   /* text-align: center; */
   width: 80%;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 }
 
 .about-sub-headers {
@@ -496,7 +496,7 @@
 .skills {
   text-align: center;
   display: grid;
-  border: 1px solid magenta;
+  /* border: 1px solid magenta; */
   max-width: 100%;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 2rem;
@@ -519,7 +519,7 @@
 .typeSkills {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border: 1px solid greenyellow
+  /* border: 1px solid greenyellow */
 }
 
 /* .hey {
@@ -599,9 +599,13 @@
 
 .blogs {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 2rem;
   padding: 2rem;
+}
+
+.caro-text {
+  text-shadow: 2px 2px #ff0000;
 }
 
 .blog-pic {
@@ -612,7 +616,7 @@
 
 .ind-blog {
   cursor: pointer;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   /* padding-bottom: 0px; */
 }
 
