--- a/src/App.css
+++ b/src/App.css
@@ -583,7 +583,7 @@
 
 .modal-foot-buttons {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1rem;
   /* border: 1px solid red; */
 }
